@@ -41,6 +41,7 @@ Linux x86_64	 1*4@3.0-3.5Ghz		16Go:8Mo	Xeon E3-1220 v5	2.4s	is231771.intra.cea.f
 Linux x86_64	2*28@2.2Ghz            131Go:19Mo	Xeon Gold 5120  2.5s	pegasi2.intra.cea.fr	(g++ 4.8.5, MPICH 3.2)		1.74	cpu_3D	 v1.8.1	
 Linux x86_64	2*24@2.3Ghz    	       192Go:16Mo	Xeon Gold 5118	2.5s	orcusloginint1.intra.cea.fr (icpc 19.0.3, IntelMPI 2019)1.61	cpu_3D	 v1.8.0
 Linux x86_64	2*32@2.1Ghz    	       128Go:32Mo	AMD Epyc 7281   2.7s	orcusloginamd1.intra.cea.fr (icpc 19.0.3, IntelMPI 2019)1.70	cpu_3D	 v1.8.0
+Linux x86_64		2*16@2.1Ghz    128Go:4Mo	AMD Epyc 7281   2.7s	orcus-amd.intra.cea.fr  (aocc 2.1.0, HPC-X 2.6.0)	1.52	cpu_3D	 v1.8.1
 Linux x86_64	 	1*4@3.20Ghz 	 8Go:8Mo	Xeon E3-1225	2.9s	malrif.intra.cea.fr	(g++ 4.4.1)		1.49		cpu_3D	 v1.6.8
 Linux x86_64	 	2*8@2.70Ghz     32Go:20Mo 	Xeon E5-2680	3.1s	supermuc.lrz.de		(icpc 12.1.6)
 Linux x86_64	 	1*2@3.10Ghz      4Go:3Mo	i5-3210M	3.2s	grenat.si.c-s.fr	(g++ 4.4.5)		0.98		cpu_3D 	 v1.6.6
@@ -158,7 +159,19 @@ HP-UX 10.20 9000/819/K200     		800Mo: 			699s		midi.alpes.cea.fr       (Compilo
 Cas VDF (4096000 inconnues en pression)
 #######################################
 ------------------------------------------------------------------------------------
-Calcul parallele TRUST 1.8.0 Tue Nov 12 19:18:15 CET 2019 sur orcus-amd : (AMD, Intel 19.0.3, Intelmpi/2019 update 3, binding "-m block:block --cpu-bind=rank"):
+Calcul parallele TRUST 1.8.2_beta Thu Jun 18 14:35:51 CEST 2020 sur orcus-amd : (AMD, AOCC 2.1.0, HPCX 2.6.0):
+------------------------------------------------------------------------------------
+nb_proc | cpu(s) dt     | ngcp  	| cpu(s) igcp   | speed up      | efficacite    |
+------------------------------------------------------------------------------------
+1       | 31.8218       | 195.55        | 0.143354      | 1.000         | 1.000         |
+2       | 16.8414       | 195.55        | 0.0758757     | 1.889         | .944          |
+4       | 8.44278       | 195.55        | 0.0376403     | 3.769         | .942          |
+8       | 4.23382       | 195.55        | 0.0188259     | 7.516         | .939          |
+16      | 2.53296       | 196.3 	| 0.0112231     | 12.563        | .785          |
+32      | 1.82093       | 196.35        | 0.00813435    | 17.47         | .546          | 1 node (32 cores)
+64      | 0.875195      | 196.55        | 0.0038366     | 36.36         | .568          | 2 nodes
+------------------------------------------------------------------------------------
+Calcul parallele TRUST 1.8.1 Tue Nov 12 19:18:15 CET 2019 sur orcus-amd : (AMD, Intel 19.0.3, Intelmpi/2019 update 3, binding "-m block:block --cpu-bind=rank"):
 ------------------------------------------------------------------------------------
 nb_proc | cpu(s) dt     | ngcp  	| cpu(s) igcp   | speed up      | efficacite    |
 ------------------------------------------------------------------------------------
@@ -167,10 +180,10 @@ nb_proc | cpu(s) dt     | ngcp  	| cpu(s) igcp   | speed up      | efficacite   
 4       | 8.69032       | 195.55        | 0.0387601     | 3.653         | .913          |
 8       | 4.31069       | 195.55        | 0.0192113     | 7.365         | .920          |
 16      | 2.46993       | 196.3 	| 0.0109613     | 12.855        | .803          |
-32      | 1.83387       | 196.35        | 0.00813929    | 17.314        | .541          |
-64      | 0.936332      | 196.55        | 0.00413962    | 33.910        | .529          |
+32      | 1.83387       | 196.35        | 0.00813929    | 17.314        | .541          | 1 node (32 cores)
+64      | 0.936332      | 196.55        | 0.00413962    | 33.910        | .529          | 2 nodes
 ------------------------------------------------------------------------------------
-Calcul parallele TRUST 1.8.0 Fri Nov 15 12:45:07 CET 2019 sur orcus-intel : (Skylake, Intel 19.0.3, Intelmpi/2019 update 3, binding "-m block:block --cpu-bind=rank"):
+Calcul parallele TRUST 1.8.1 Fri Nov 15 12:45:07 CET 2019 sur orcus-intel : (Skylake 5118, Intel 19.0.3, Intelmpi/2019 update 3, binding "-m block:block --cpu-bind=rank"):
 ------------------------------------------------------------------------------------
 nb_proc | cpu(s) dt     | ngcp  	| cpu(s) igcp   | speed up      | efficacite    |
 ------------------------------------------------------------------------------------
@@ -178,9 +191,21 @@ nb_proc | cpu(s) dt     | ngcp  	| cpu(s) igcp   | speed up      | efficacite   
 2       | 19.6539       | 195.55        | 0.0872897     | 1.857         | .928          |
 4       | 10.2653       | 195.55        | 0.0446267     | 3.555         | .888          |
 8       | 5.44554       | 195.55        | 0.0235909     | 6.702         | .837          |
-16      | 3.25484       | 196.3 	| 0.0140845     | 11.214        | .700          |
-32      | 1.66124       | 196.35        | 0.00712086    | 21.971        | .686          |
-64      | 0.944509      | 196.55        | 0.00408453    | 38.644        | .603          |
+16      | 3.25484       | 196.3 	| 0.0140845     | 11.214        | .700          | 1 node (24 cores)
+32      | 1.66124       | 196.35        | 0.00712086    | 21.971        | .686          | 2 nodes
+64      | 0.944509      | 196.55        | 0.00408453    | 38.644        | .603          | 3 nodes
+------------------------------------------------------------------------------------
+Calcul parallele TRUST 1.8.1 Thu Jun 18 13:21:56 CEST 2020 sur orcus-intel : (Skylake 6226, Intel 19.0.3, Intelmpi/2019 update 3, binding "-m block:block --cpu-bind=rank"):
+------------------------------------------------------------------------------------
+nb_proc | cpu(s) dt     | ngcp  	| cpu(s) igcp   | speed up      | efficacite    |
+------------------------------------------------------------------------------------
+1       | 33.7367       | 195.55        | 0.148875      | 1.000         | 1.000         |
+2       | 17.7583       | 195.55        | 0.0787645     | 1.899         | .949          |
+4       | 9.73623       | 195.55        | 0.0423206     | 3.465         | .866          |
+8       | 5.83937       | 195.55        | 0.0255612     | 5.777         | .722          |
+16      | 4.41672       | 196.3 	| 0.0196666     | 7.638         | .477          |
+32      | 2.08274       | 196.35        | 0.00913308    | 16.198        | .506          |
+64      | 1.22045       | 196.55        | 0.00533864    | 27.642        | .431          |
 ------------------------------------------------------------------------------------
 Calcul parallele TRUST 1.7.7 Tue Jun 26 14:49:21 CEST 2018 sur cobalt (Broadwell, Intel 16.0.3, OpenMPI 1.8.8):  
 ------------------------------------------------------------------------------------                                                                                           
